# Keel

./: .gitignore  .keelignore  CHANGELOG.md  CI.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  SECURITY.md  agent-swarm.md  claudecode_feedback.md  codecov.yml  constitution.md  continuous-improvement.md  design-principles.md  last-mile.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
.keel/: config.toml  keel.json  last_compile.json
.keel-swarm/: prompt-lead-a.md  prompt-lead-b.md  prompt-lead-c.md  status.md
.keel/hooks/: post-edit.sh  pre-commit
agent-swarm/: README.md  infrastructure.md  operations.md  phases.md  scope-limits.md  spawn-prompts.md
benches/: performance.rs
ci/: README.md  colors.md  landing-page.md  logo.md  messaging.md  pro.md  typography.md  visual-language.md
crates/keel-cli/: Cargo.toml  README.md
crates/keel-cli/src/: auth.rs  auth_tests.rs  cli_args.rs  cli_args_tests.rs  main.rs  telemetry_recorder.rs  telemetry_recorder_tests.rs  update_check.rs  update_check_tests.rs
crates/keel-cli/src/commands/: analyze.rs  audit.rs  check.rs  compile.rs  compile_lock.rs  compile_metrics.rs  compile_metrics_tests.rs  completion.rs  config.rs  config_tests.rs  context.rs  deinit.rs  discover.rs  explain.rs  fix.rs  init.rs  input_detect.rs  json_helpers.rs  json_helpers_tests.rs  login.rs  logout.rs  map.rs  map_cached.rs  map_helpers.rs  map_resolve.rs  map_tier3.rs  mod.rs  name.rs  parse_util.rs  push.rs  push_tests.rs  search.rs  serve.rs  stats.rs  upgrade.rs  upgrade_tests.rs  watch.rs  where_cmd.rs
crates/keel-cli/src/commands/init/: generators.rs  hook_script.rs  merge.rs  templates.rs
crates/keel-cli/templates/aider/: keel-instructions.md
crates/keel-cli/templates/antigravity/: SKILL.md  keel.md
crates/keel-cli/templates/ci/: gitlab-ci.yml
crates/keel-cli/templates/claude-code/: keel-instructions.md  settings.json
crates/keel-cli/templates/codex/: config.toml  keel-notify.py
crates/keel-cli/templates/copilot/: copilot-instructions.md
crates/keel-cli/templates/cursor/: hooks.json  keel.mdc
crates/keel-cli/templates/gemini-cli/: GEMINI.md  settings.json
crates/keel-cli/templates/hooks/: post-edit.sh  pre-commit.sh
crates/keel-cli/templates/letta-code/: keel-instructions.md  settings.json
crates/keel-cli/templates/windsurf/: hooks.json  keel.windsurfrules
crates/keel-core/: Cargo.toml  README.md
crates/keel-core/src/: config.rs  hash.rs  lib.rs  sqlite.rs  sqlite_batch.rs  sqlite_helpers.rs  sqlite_queries.rs  sqlite_tests.rs  store.rs  telemetry.rs  telemetry_tests.rs  types.rs
crates/keel-enforce/: Cargo.toml  README.md
crates/keel-enforce/src/: analyze.rs  batch.rs  check.rs  circuit_breaker.rs  engine.rs  engine_tests.rs  fix_generator.rs  hash_diff.rs  hash_diff_tests.rs  lib.rs  naming.rs  naming_tests.rs  snapshot.rs  suppress.rs  types.rs  violations.rs  violations_extended.rs  violations_util.rs
crates/keel-enforce/src/audit/: agent_config.rs  discoverability.rs  mod.rs  navigation.rs  structure.rs  verification.rs
crates/keel-enforce/src/types/: analyze.rs  audit.rs  check.rs  delta.rs  fix_name.rs  mod.rs
crates/keel-output/: Cargo.toml  README.md
crates/keel-output/src/: human.rs  human_helpers.rs  json.rs  lib.rs  llm.rs  radar.rs  token_budget.rs
crates/keel-output/src/llm/: analyze.rs  audit.rs  check.rs  compile.rs  discover.rs  explain.rs  fix.rs  map.rs  mod.rs  name.rs  violation.rs
crates/keel-parsers/: Cargo.toml  README.md
crates/keel-parsers/src/: lib.rs  monorepo.rs  resolver.rs  walker.rs
crates/keel-parsers/src/go/: mod.rs  tests.rs  type_resolution.rs
crates/keel-parsers/src/monorepo/: detect.rs  helpers.rs  mod.rs  tests.rs
crates/keel-parsers/src/python/: helpers.rs  mod.rs  package_resolution.rs  star_imports.rs  ty.rs
crates/keel-parsers/src/queries/: go.scm  mod.rs  python.scm  rust.scm  typescript.scm
crates/keel-parsers/src/rust_lang/: helpers.rs  mod.rs  mod_resolution.rs  tests.rs  trait_resolution.rs
crates/keel-parsers/src/tier3/: cache.rs  mod.rs  provider.rs
crates/keel-parsers/src/tier3/lsp/: mod.rs  protocol.rs  transport.rs
crates/keel-parsers/src/tier3/scip/: mod.rs  reader.rs  symbol.rs
crates/keel-parsers/src/treesitter/: imports.rs  mod.rs  tests.rs
crates/keel-parsers/src/typescript/: helpers.rs  mod.rs  semantic.rs  tests.rs
crates/keel-server/: Cargo.toml  README.md
crates/keel-server/src/: http.rs  lib.rs  mcp.rs  mcp_analyze.rs  mcp_audit.rs  mcp_check.rs  mcp_compile.rs  mcp_context.rs  mcp_fix.rs  mcp_name.rs  mcp_search.rs  mcp_stdio.rs  mcp_tests.rs  parse_shared.rs  watcher.rs
docs/: CNAME  agent-integration.md  book.toml  faq.md  getting-started.md  release-secrets.md
docs/research/: PRD_1.md  claude_arch.md  claude_pos.md  gemini_arch.md  gemini_pos.md  perplexity_arch.md  perplexity_pos.md  sum_arch.md  sum_pos.md
docs/src/: SUMMARY.md  commands.md  config.md  error-codes.md  getting-started.md  introduction.md
extensions/vscode/: CHANGELOG.md  README.md  package.json
keel-speckit/000-graph-schema/: spec.md
keel-speckit/001-treesitter-foundation/: spec.md
keel-speckit/002-typescript-resolution/: spec.md
keel-speckit/003-python-resolution/: spec.md
keel-speckit/004-go-resolution/: spec.md
keel-speckit/005-rust-resolution/: spec.md
keel-speckit/006-enforcement-engine/: spec.md
keel-speckit/007-cli-commands/: spec.md
keel-speckit/008-output-formats/: spec.md
keel-speckit/009-tool-integration/: spec.md
keel-speckit/010-mcp-http-server/: spec.md
keel-speckit/011-vscode-extension/: spec.md
scripts/: ci-swarm.sh  install.sh  setup_test_repos.sh  test-fast.sh  test-full.sh  test-perf.sh  validate_corpus.sh
scripts/ci-prompts/: bugs.md  (+2 more)
src/: lib.rs
tests/: benchmarks.rs  cli.rs  contracts.rs  corpus.rs  enforcement.rs  fixtures.rs  graph.rs  graph_correctness.rs  integration.rs  output.rs  parsing.rs  resolution.rs  server.rs  tool_integration.rs
(+169 files in other folders)
