[package]
name = "keel-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "keel"
path = "src/main.rs"

[dependencies]
keel-core = { workspace = true }
keel-parsers = { workspace = true }
keel-enforce = { workspace = true }
keel-output = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
