[package]
name = "keel-cli"
version.workspace = true
edition.workspace = true
description = "CLI entry point and command routing for keel"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "keel"
path = "src/main.rs"

[dependencies]
keel-core = { workspace = true }
keel-parsers = { workspace = true }
keel-enforce = { workspace = true }
keel-output = { workspace = true }
keel-server = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
