[package]
name = "keel-cli"
version.workspace = true
edition.workspace = true
description = "CLI entry point and command routing for keel"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "keel"
path = "src/main.rs"

[dependencies]
keel-core = { workspace = true }
keel-parsers = { workspace = true }
keel-enforce = { workspace = true }
keel-output = { workspace = true }
keel-server = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dialoguer = { workspace = true }
notify = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
xxhash-rust = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["tier3"]
tier3 = ["keel-parsers/tier3"]

[dev-dependencies]
tempfile = "3"
