[package]
name = "keel-core"
version.workspace = true
edition.workspace = true
description = "Core graph schema, hashing, and SQLite storage for keel"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rusqlite = { workspace = true }
petgraph = { workspace = true }
xxhash-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
