[package]
name = "keel-enforce"
version.workspace = true
edition.workspace = true
description = "Compile validation, error codes, and circuit breaker for keel"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
keel-core = { workspace = true }
keel-parsers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
