[package]
name = "keel-output"
version.workspace = true
edition.workspace = true
description = "JSON, LLM, and human output formatters for keel"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
keel-core = { workspace = true }
keel-enforce = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
