[package]
name = "keel-parsers"
version.workspace = true
edition.workspace = true

[dependencies]
keel-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-rust = { workspace = true }
oxc_resolver = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
xxhash-rust = { workspace = true }
streaming-iterator = "0.1"
