[package]
name = "keel-parsers"
version.workspace = true
edition.workspace = true
description = "Tree-sitter parsing and per-language resolution for keel"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
keel-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-rust = { workspace = true }
oxc_resolver = { workspace = true }
oxc_semantic = { workspace = true }
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
xxhash-rust = { workspace = true }
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3"
